--- a/config/gpt_oss_config.yaml
+++ b/config/gpt_oss_config.yaml
@@ -1,8 +1,11 @@
 model: "gpt-oss-120b"
-api_base: "https://your-gpt-oss-120b-api-endpoint.com/v1"
-api_key: "${API_KEY}"  # Will be replaced with environment variable
+api_base: "http://10.211.37.7:9021"  # Replace with your actual endpoint
+api_key: "EMPTY"
 instances: 1
 per_instance_max_parallel_requests: 10
 request_timeout: 120
 max_retries: 6
 retry_delay: 4
+temperature: 0.0
+top_p: 0.9
+max_tokens: 32000
